primeiro commit - aula 23

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Teste</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
