--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="paginas/home.html" name="tela" id="tela" scrolling="" frameborder="0">
+                Seu navegador não é compatível com isso!
+            </iframe>
         </section>
 
         <section id="redes-sociais">
-
+            <a href="paginas/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a>
+            <a href="paginas/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
+            <a href="paginas/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a>
+            <a href="paginas/Instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="paginas/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+            <a href="paginas/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
